--- a/TAREA_3_FINAL.ipynb
+++ b/TAREA_3_FINAL.ipynb
@@ -32,23 +32,31 @@
       "source": [
         "# Stenografía - Tarea Final\n",
         "\n",
-        "La palabra esteganografía se deriva de las palabras griegas \"stegos\" que significan \"cubierta\" y \"grafía\" que significa \"escritura\" y la define como \"escritura cubierta\"[1].\n",
+        "## Introducción\n",
         "\n",
-        "La esteganografía y la criptografía están estrechamente relacionadas. La criptografía codifica los mensajes para que no puedan ser entendidos. La esteganografía, por otro lado, esconderá el mensaje para que no haya conocimiento de la existencia del mensaje en primer lugar. En algunas situaciones, el envío de un mensaje cifrado despertará sospechas, mientras que un mensaje \"invisible\" no lo hará. Ambas ciencias pueden combinarse para producir una mejor protección del mensaje. En este caso, cuando la esteganografía falla y el mensaje puede ser detectado, sigue siendo inútil, ya que está encriptado mediante técnicas de criptografía. [2] \n",
+        "En diferentes circunstancias el ser humano ha necesitado de herramientas efectivas para transmitir mensajes donde la información contenida solo sea comprendida por quien sea identificado como el receptor objetivo y no por terceros. La criptografía es una herramienta muy útil cuando se desea tener seguridad sobre todo en contextos informáticos ya que sirve de medio para garantizar confidencialidad, integridad y disponibilidad de los recursos. \n",
         "\n",
-        "La Stenografia se compone de dos elementos principales el mensaje y el portador o la covertura del mensaje. Se puede clasificar mediante el tipo de portador o covertura que se utilice para portar un mensaje. Las principales clasificaciones son Texto, Audio e Imagenes [3], [4]:\n",
+        "En el presente trabajo se introduce un nuevo concepto, la estenografía, que combinada con criptografía se crea una técnica para asegurar información a simple vista, se plantea sus definiciones y sus principales clasificaciones, además se plantea un ejemplo realizado en el lenguaje de programación Python.\n",
+        "\n",
+        "## Estenografía\n",
+        "\n",
+        "La palabra esteganografía se deriva de las palabras griegas \"stegos\" que significan \"cubierta\" y \"grafía\" que significa \"escritura\" y la define como \"escritura cubierta\"[1]. La esteganografía y la criptografía están estrechamente relacionadas. La criptografía codifica los mensajes para que no puedan ser entendidos. La esteganografía, por otro lado, esconderá el mensaje para que no haya conocimiento de la existencia del mensaje en primer lugar. En algunas situaciones, el envío de un mensaje cifrado despertará sospechas, mientras que un mensaje \"invisible\" no lo hará. Ambas ciencias pueden combinarse para producir una mejor protección del mensaje. En este caso, cuando la esteganografía falla y el mensaje puede ser detectado, sigue siendo inútil, ya que está encriptado mediante técnicas de criptografía. [2] La Escenografía se compone de dos elementos principales el mensaje y el portador o la cobertura del mensaje. Se puede clasificar mediante el tipo de portador o cobertura que se utilice para portar un mensaje. Las principales clasificaciones son Texto, Audio e Imagenes [3], [4]:\n",
         "\n",
         "* Texto:\n",
         "El método de esteganografía utiliza los medios de texto para ocultar los datos es conocidos como esteganografía de texto. Existen diferentes técnicas para incrustar los datos secretos en archivos de texto.\n",
         "  * Método basado en el formato: Este método modifica el texto existente para ocultar los datos de tal manera que implica la inserción de espacios, redimensionar el texto, cambiar el estilo del texto.\n",
         "\n",
-        "  * Método aleatorio y estadístico: En este método se ocultan los caracteres que aparecieron en secuencia aleatoria. El método estadístico determina las estadísticas tales como la media, la varianza y el texto chi cuadrado que miden la cantidad de información redundante que se debe ocultar dentro del texto. \n",
+        "  * Método aleatorio y estadístico: En este método se ocultan los caracteres que aparecen en secuencia aleatoria. El método estadístico determina las estadísticas tales como la media, la varianza y el texto chi cuadrado que miden la cantidad de información redundante que se debe ocultar dentro del texto.\n",
         "\n",
-        "  * Método Lingüístico:  Es la combinación de sintaxis y semántica. La esteganálisis sintáctica asegura la estructura correcta ya que el texto se genera a partir de la gramática. En el método semántico se asigna un valor a los sinónimos y los datos pueden ser codificados a la palabra real del texto. \n",
+        "  * Método Lingüístico: Es la combinación de sintaxis y semántica. La estegoanálisis sintáctica asegura la estructura correcta ya que el texto se genera a partir de la gramática. En el método semántico se asigna un valor a los sinónimos y los datos pueden ser codificados a la palabra real del texto. \n",
         "\n",
-        "* Imagenes: En este método, las imágenes se utilizan como objeto de cobertura. La imagen Esteganografía, se puede clasificar en diferentes categorías.\n",
-        "  * Dominio espacial: En el ámbito espacial, cubra la imagen y los datos secretos modificados mediante la codificación LSB y de nivel. Primero, la imagen de la portada se descompone en planos de bits y luego LSB es de planos de bits reemplazados por el ajuste de datos secretos. Este método proporciona una mejor calidad de imagen. El único inconveniente de la inserción de LSB es la simplicidad del proceso de extracción.  \n",
-        "  * Dominio de frecuencia:  Los datos secretos se ocultan en áreas significativas de la imagen cubierta, lo que hace que los datos sean más vigorosos para ataques como la compresión, el recorte o los métodos de procesamiento de imágenes que el enfoque LSB. Este método de transformación incluye DCT, DWT y DFT. \n",
+        "* Imagenes: \n",
+        "En este método, las imágenes se utilizan como objeto de cobertura. La imagen Esteganografía, se puede clasificar en diferentes categorías.\n",
+        "\n",
+        "  * Dominio espacial: En el ámbito espacial, cubra la imagen y los datos secretos modificados mediante la codificación LSB y de nivel. Primero, la imagen de la portada se descompone en planos de bits y luego LSB es de planos de bits reemplazados por el ajuste de datos secretos. Este método proporciona una mejor calidad de imagen. El único inconveniente de la inserción de LSB es la simplicidad del proceso de extracción.\n",
+        "\n",
+        "  * Dominio de frecuencia: Los datos secretos se ocultan en áreas significativas de la imagen cubierta, lo que hace que los datos sean más vigorosos para ataques como la compresión, el recorte o los métodos de procesamiento de imágenes que el enfoque LSB. Este método de transformación incluye DCT, DWT y DFT.\n",
+        " \n",
         "  * Dominio adaptativo: Este método de esteganografía es un caso especial de dos métodos: dominio espacial y dominio de transformación. También se conoce como \"Statistics Aware Embedding\" y \"Masking\". Las características globales de las imágenes se utilizan antes de integrar datos secretos en los coeficientes de DCT o DWT. Estas estadísticas decidirán dónde se pueden hacer los cambios. \n",
         "\n",
         "* Audio: \n",
@@ -58,18 +66,30 @@
         "\n",
         "  * Codificación de fase: En este método, el archivo stream divide el audio en bloques e integra toda la secuencia secreta en el espectro de fases del primer bloque. \n",
         "\n",
-        "  * Espectro ensanchado: Un método particular de codificación de espectro ensanchado es el DSSS (Direct Sequence Spread Spectrum) que extiende la esteganografía multiplicándola por cierta secuencia pseudoaleatoria. \n",
+        "  * Espectro ensanchado: Un método particular de codificación de espectro ensanchado es el DSSS (Direct Sequence Spread Spectrum) que extiende la esteganografía multiplicándose por cierta secuencia pseudoaleatoria. \n",
         "\n",
-        "Las aplicaciones se muy diversas, esta tecnica a sido utilizada por distintos tipoas de organizaciones tanto gubernamentales como terroristas, con el objevito de transmitir mensajes.\n",
+        "Las aplicaciones son muy diversas, esta técnica a sido utilizada por distintos tipos de organizaciones tanto gubernamentales como terroristas, con el objetivo de transmitir mensajes.\n",
         "\n",
         "\n",
-        "Para la implementación de una aplicación se ha seleccionado trabajar mediante imagenes ya se su implementacion es relativamente trivial utilizando el lenguaje de programación python. Además es interesante poder reflexionár sobre cuanto mensajes ocultos pasan ante nuestro ojos sin que seamos capaces de darnos cuenta, pero mediante la utlizacion de software podemos revelar el contenido de éstos.\n",
         "\n",
-        "# Implementacion de Aplicación\n",
+        "\n",
+        "## Implementacion de Aplicación\n",
         "(Revisar Codigo.)\n",
-        "La aplicación, basicamente consiste en generar un par de claves RSA (Publica y Privado), utilizando Stenografía se oculta dentro de la una Imagen pensando en ser enviada a un ente que requiere de dicha clave, para luego ser revelada y obtener su contenido.\n",
+        "Para la implementación de una aplicación se ha seleccionado trabajar mediante imágenes ya se su implementación es relativamente trivial utilizando el lenguaje de programación python. Además es interesante poder reflexionar sobre cuánto mensajes ocultos pasan ante nuestro ojos sin que seamos capaces de darnos cuenta, pero mediante la utilización de software podemos revelar el contenido de éstos.\n",
         "\n",
-        "# Bibliografía\n",
+        "La aplicación, básicamente consiste en generar un par de claves RSA (Pública y Privado), utilizando Estenografía se oculta dentro de la una Imagen pensando en ser enviada a un ente que requiere de dicha clave, para luego ser revelada y obtener su contenido.\n",
+        "\n",
+        "## Conclusiones\n",
+        "\n",
+        "La estenografía es un herramienta utilizada para ocultar información en diferentes medios que a su vez generan la diferentes clasificación de escenografía como son las de Texto que comprenden métodos basados en el formato, métodos aleatorio y estadístico, método lingüístico, también la clasificación en base a Imágenes que comprenden dominio espacial, dominio de frecuencia dominio adaptativo y por último la clasificación de Audio que comprende la codificación de bits bajos, codificación de fase y espectro ensanchado. \n",
+        "\n",
+        "Sus aplicaciones son diversas bajos diferentes contexto, es utilizada por diferentes organización es de variadas índoles, que buscan ocultar y transmitir información. \n",
+        "\n",
+        "En el caso práctico se aplica la estenografía de imágenes en combinación con RSA en donde se generan dos claves, una pública y una privada. La clave pública es ocultada en una imagen en la cual a simple vista parece inalterada, comprobando de esta forma la practicidad de la técnica.\n",
+        "\n",
+        "\n",
+        "\n",
+        "## Bibliografía\n",
         "[1] Sara Khosravi, Mashallah Abbasi Dezfoli, Mohammad Hossein Yektaie, A new steganography method based HIOP (Higher Intensity Of Pixel)\n",
         "algorithm and Strassen's matrix multiplication, Journal of Global Research in Computer Science, Vol. 2, No. 1, 2011. \n",
         "\n",
@@ -85,16 +105,16 @@
       "metadata": {
         "id": "UdnIW3D84J93",
         "colab_type": "code",
+        "outputId": "b3a5f7bc-6bb9-4463-9c75-7619146def1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        },
-        "outputId": "b3a5f7bc-6bb9-4463-9c75-7619146def1f"
+        }
       },
       "source": [
         "pip install pycrypto Stegano"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,16 +136,16 @@
       "metadata": {
         "id": "h6TJe-A29TOD",
         "colab_type": "code",
+        "outputId": "2f235a43-a1fc-43b0-e8cd-3af161451552",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 89
-        },
-        "outputId": "2f235a43-a1fc-43b0-e8cd-3af161451552"
+        }
       },
       "source": [
         "ll"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,11 +164,11 @@
       "metadata": {
         "id": "XCef-jAVV3ZA",
         "colab_type": "code",
+        "outputId": "c82d494a-1907-44ea-c73a-97c3a62bec2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 548
-        },
-        "outputId": "c82d494a-1907-44ea-c73a-97c3a62bec2f"
+        }
       },
       "source": [
         "#Codigo python\n",
@@ -166,7 +186,7 @@
         "Image('ny.png')\n",
         "\n"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,11 +215,11 @@
       "metadata": {
         "id": "FDEFupNqEris",
         "colab_type": "code",
+        "outputId": "03fd19db-cd9f-44dd-aa9c-f8fdace55d3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
-        },
-        "outputId": "03fd19db-cd9f-44dd-aa9c-f8fdace55d3e"
+        }
       },
       "source": [
         "#Parte 1:\n",
@@ -213,7 +233,7 @@
         "print('public_key',public_key)\n",
         "\n"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,11 +250,11 @@
       "metadata": {
         "id": "lzAs2IzZEw18",
         "colab_type": "code",
+        "outputId": "d4bfc58a-7212-4e81-bc06-077858df71ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        },
-        "outputId": "d4bfc58a-7212-4e81-bc06-077858df71ff"
+        }
       },
       "source": [
         "#Parte 2:\n",
@@ -246,7 +266,7 @@
         "print('Imagen con Clave RSA Publica oculta. ')\n",
         "Image('stegano-ny.png')"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,11 +288,11 @@
       "metadata": {
         "id": "CS2MZIJ3Eyxk",
         "colab_type": "code",
+        "outputId": "d2a8d7f7-46b6-4373-e6b2-d356f62faf40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
-        },
-        "outputId": "d2a8d7f7-46b6-4373-e6b2-d356f62faf40"
+        }
       },
       "source": [
         "#Parte 3:\n",
@@ -281,7 +301,7 @@
         "\n",
         "print('Mensaje',clear_message)"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
