--- a/TAREA_3_FINAL.ipynb
+++ b/TAREA_3_FINAL.ipynb
@@ -30,7 +30,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Stenografía - Tarea Final\n",
+        "# Estenografía - Tarea Final\n",
         "\n",
         "## Introducción\n",
         "\n",
